# axum-rust-twillo-tutorial

./: Cargo.toml
example/: axum_basics.rs
examples/: 1_crate_a_rust_app.rs  2_axum_basics.rs  3_get_request_with_path_and_query_extractors.rs  4_post_request_with_json_extractors.rs  surrealdb_create_db_table.rs  surrealdb_crud.rs
src/: lib.rs  main.rs  surrealdb_crud.rs  surrealdb_curd_person.rs
