[package]
name = "my_rest_api_twillo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
surrealdb = "1.2.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
watch = "0.2.3"
